--- a/claims-management-backend/package.json
+++ b/claims-management-backend/package.json
@@ -29,6 +29,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
+    "express-fileupload": "^1.4.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
     "multer": "^1.4.5-lts.1",
